--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,46 @@
 }
 
 /* common */
+a{
+    text-decoration: none;
+    color: black;
+}
+ul{
+   list-style-type: none;
+}
+body{
+    color: black;
+}
+.flex{
+    display: flex;
+}
 
+.btn{
+    background-color: blue;
+    color: white;
+    border: 0;
+    border-radius: 0;
+    padding: 10px;
+    margin-left: 15px;
+}
 /* typo */
 
 /* header */
+.nav{
+    height: inherit;
+    width: 100%;
+    padding: 20px;
+    justify-content: space-between;
+}
+
+.nav-lista{
+    gap: 15px;
+    align-items: center;
+    margin-left: 15px;
+    font-size: 18px;
+    white-space: nowrap;
+}
+
+
 
 /* main */
