--- a/css/style.css
+++ b/css/style.css
@@ -55,15 +55,15 @@ body{
 main{
    background-color: #b4d0e7;
    height: 600px;
-}
-
-.cont-main{
-   padding-top: 40px;
-   width: 80%;
-   margin:0 auto;
    text-align: left;
 }
-main .cont-main h1{
+
+.cont-main-one{
+   padding-top: 40px;
+   width: 80%;
+   margin:0 auto; 
+}
+main .cont-main-one h1{
     font-size: 4em;
     line-height: 1em;
     
@@ -97,4 +97,41 @@ main .cont-main h1{
     font-size: 35px;
     font-weight: bolder;
     padding-top: 25px ;
+}
+
+
+/* second section */
+
+.cont-main-two{
+   width: 70%;
+   margin: 200px auto;
+   height: 800px;
+   border: 1px solid black;
+}
+
+.cont-main-two h2{
+    font-size: 30px;
+}
+.cont-main-two> *{
+padding-bottom: 30px;
+padding-right: 10px;
+}
+
+.tabelle{
+    display: flex;
+    width: 100%;
+    gap: 10px;
+}
+
+.tabella{
+    height: 400px;
+    width: calc(100% / 3);
+    border:1px solid black ;
+
+}
+
+.tabella-quattro{
+    width: 100%;
+    height: 200px;
+    border:1px solid black ;
 }
