--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ main .cont-main-one h1{
    width: 70%;
    margin: 200px auto;
    height: 800px;
-   border: 1px solid black;
+   
 }
 
 .cont-main-two h2{
@@ -134,4 +134,32 @@ padding-right: 10px;
     width: 100%;
     height: 200px;
     border:1px solid black ;
+}
+
+.cont-tabella-top{
+    border: 1px solid black;
+    text-align: center;
+    padding: 10px;
+}
+
+.cont-tabella-bottom{
+    padding: 20px 10px;
+}
+
+.mese{
+    color: lightgray;
+    padding-bottom: 40px;
+}
+
+.btn-mod-due{
+     margin: 40px;
+}
+
+.cont-main-two .tabella .cont-tabella-bottom a{
+    text-decoration: underline;
+    color: blue;
+}
+
+.cont-main-two .tabella .cont-tabella-bottom hr{
+    width: 20%;
 }
