seconda-sezione-main

--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,6 @@ body{
 
 /* header */
 .nav{
-    height: inherit;
-    width: 100%;
     padding: 20px;
     justify-content: space-between;
     /* position: fixed;
@@ -45,9 +43,12 @@ body{
     align-items: center;
     margin-left: 15px;
     font-size: 18px;
-    white-space: nowrap;
+    /* white-space: nowrap; */
 }
 
+.logo{
+    width: 150px;
+}
 
 
 /* main */
@@ -114,7 +115,6 @@ main .cont-main-one h1{
 }
 .cont-main-two> *{
 padding-bottom: 30px;
-padding-right: 10px;
 }
 
 .tabelle{
@@ -124,7 +124,6 @@ padding-right: 10px;
 }
 
 .tabella{
-    height: 400px;
     width: calc(100% / 3);
     border:1px solid black ;
 
@@ -132,7 +131,6 @@ padding-right: 10px;
 
 .tabella-quattro{
     width: 100%;
-    height: 200px;
     border:1px solid black ;
 }
 
@@ -143,7 +141,7 @@ padding-right: 10px;
 }
 
 .cont-tabella-bottom{
-    padding: 20px 10px;
+    padding: 20px 20px;
 }
 
 .mese{
@@ -152,7 +150,7 @@ padding-right: 10px;
 }
 
 .btn-mod-due{
-     margin: 40px;
+     margin: 40px 5px;
 }
 
 .cont-main-two .tabella .cont-tabella-bottom a{
@@ -161,5 +159,34 @@ padding-right: 10px;
 }
 
 .cont-main-two .tabella .cont-tabella-bottom hr{
-    width: 20%;
+    width: 40%;
+    margin: 20px 0;
 }
+.cont-main-two .tabella .cont-tabella-bottom .check i{
+    color: blue;
+}
+
+.cont-main-two .tabella .cont-tabella-bottom .check,
+.cont-main-two .tabella-quattro .cont-tabella-bottom {
+    line-height: 30px;
+}
+
+.cont-main-two .tabella-quattro .cont-tabella-bottom p{
+    padding-top: 40px;
+    color: rgb(163, 169, 175);
+}
+
+
+.cont-main-two .tabella-quattro .cont-tabella-bottom h3 {
+    font-size: 30px;
+    padding-bottom: 10px;
+
+}
+
+.cont-main-two .tabella-quattro .cont-tabella-bottom button {
+    position: relative;
+    bottom: 135px;
+    left: 780px;
+}
+
+/* fine seconda sezione */
