drop-box-completo

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body{
     border: 0;
     border-radius: 0;
     padding: 10px;
-    margin-left: 15px;
+    margin: 15px;
 }
 .second-btn{
     background-color: transparent;
@@ -40,8 +40,10 @@ body{
 }
 
 .cont-main-two{
-    width: 70%;
+    max-width: 1000px;
     margin: 200px auto;
+    
+
     
  }
 /* typo */
@@ -52,34 +54,36 @@ body{
 /* header */
 header{
     height: 80px;
+    line-height: 80px;
     position: fixed;
     top: 0;
     left:0;
     right: 0;
     z-index: 2;
     background-color: white;
+
 }
 .nav{
-    padding: 20px;
     justify-content: space-between;
+    align-items: center;
     
 }
 
 .nav-lista{
-    gap: 15px;
-    align-items: center;
     margin-left: 15px;
     font-size: 18px;
    
 }
-
+.nav .nav-lista li *{
+    margin-right: 15px;
+} 
 .nav .nav-lista li:hover{
     border-bottom: 2px solid black;
     
 }
 
 .logo{
-    width: 150px;
+    vertical-align: middle;
 }
 
 
@@ -96,12 +100,14 @@ main{
 }
 .cont-main-one{
    padding-top: 40px;
-   width: 80%;
+   /* cambia */
+   max-width: 1200px;
    margin:0 auto; 
 }
 main .cont-main-one h1{
-    font-size: 4em;
+    font-size: 77px;
     line-height: 1em;
+    width: 100%;
     
 }
 .destra-sinistra{
@@ -183,38 +189,16 @@ main .cont-main-one h1{
 .radio-input:checked + .radio-radio::after {
     transform: scale(1);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* /radio input */
 .tabelle{
     display: flex;
     width: 100%;
-    gap: 10px;
+    justify-content: space-between;
     margin-top: 20px;
 }
 
 .tabella{
-    width: calc(100% / 3);
+    width: 30%;
     border:1px solid black ;
 
 }
@@ -257,8 +241,6 @@ main .cont-main-one h1{
     color: blue;
 }
 
-
-
 .cont-main-two .tabella-quattro .cont-tabella-bottom p{
     padding-top: 40px;
     color: rgb(163, 169, 175);
@@ -269,15 +251,15 @@ main .cont-main-one h1{
 .testo-cont h3,
 #section-five h3{
     font-size: 30px;
-    padding-bottom: 10px;
+    padding: 20px 0;
 
 }
 
-.cont-main-two .tabella-quattro .cont-tabella-bottom button {
-    position: relative;
-    bottom: 135px;
-    left: 780px;
-}
+
+.cont-main-two .tabella-quattro .cont-tabella-bottom {
+    justify-content: space-between;
+
+} 
 
 /* fine seconda sezione */
 
@@ -301,13 +283,12 @@ main .cont-main-one h1{
 }
 
 .cont-box{
-    
     flex-wrap: wrap;
-   
+    justify-content: space-between;
 }
 
 .box{
-    width: calc(100% / 3); 
+    width: 30%; 
 }
 
 #section-four .cont-box .box img{
@@ -338,6 +319,7 @@ main .cont-main-one h1{
 
 .colon{
     width: calc(100% / 3); 
+    height: calc(100vw / 3);
     background-color: rgb(230, 228, 228);
     height: 60vh;
     flex-wrap: wrap;
@@ -370,14 +352,23 @@ main .cont-main-one h1{
 
 .colon-cont img{
     filter: invert(100%);
-    width: 60%;
-    text-align: center;
-    vertical-align: middle;
+    width: 50%;
 }
-
+/* .colore-speciale{
+    padding: 5px;
+    background-color: green;
+} */
+ 
 #logo-one{
+    background-color:#c7efc2;
+}
+.colore-spec{
+    height: 90%;
+    width: 90%;
     background-color:#a2d39b;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #logo-two{
@@ -418,6 +409,7 @@ main .cont-main-one h1{
 }
 
 .btn-three{
+    background-color: #ffffff;
     border: 0;
     padding: 10px;
     height: max-content;
@@ -439,7 +431,12 @@ main .cont-main-one h1{
 #section-seven .flex i{
     margin-left: 30%;
 }
-
+.hover{
+    display: none;
+}
+.hover-box:hover > .hover{
+    display: block;
+}
 /* footer */
 footer{
     background-color: black;
@@ -452,7 +449,9 @@ footer{
     padding-bottom: 80px;
     justify-content: center;
     align-items: center;
-    gap: 60px;
+}
+.footer > *{
+    margin: 60px;
 }
 .footer h3{
     padding-bottom: 30px;
@@ -460,11 +459,17 @@ footer{
 .footer ul li{
     line-height: 35px;
 }
+footer  hr{
+    width: 10%;
+    margin-left: 60px;
+}
 .footer-bottom{
-    padding: 80px 10%;
+    padding-top: 40px;
+    max-width: 1000px;
+    margin-left: 60px;
 }
 
 .footer-bottom > *{
     margin-right: 10px;
     vertical-align: middle;
-}
+} 
